@@ -1,6 +1,7 @@
 // Global.custom - customizations to Gdk.Global
 //
 // Authors: Mike Kestner  <mkestner@ximian.com>
+//          Boyd Timothy  <btimothy@novell.com>
 //
 // Copyright (c) 2004 Novell, Inc.
 
@@ -34,3 +35,89 @@
 			return result;
 		}
 
+		[DllImport ("gdksharpglue")]
+		static extern IntPtr gtksharp_get_gdk_net_supported ();
+
+		public static Gdk.Atom[] SupportedWindowManagerHints {
+			get {
+				IntPtr raw_ret = gtksharp_get_gdk_net_supported ();
+				if (raw_ret == IntPtr.Zero)
+					return new Gdk.Atom [0];
+				GLib.List list = new GLib.List (raw_ret, typeof (Gdk.Atom));
+				Gdk.Atom[] atoms = new Gdk.Atom [list.Count];
+				for (int i = 0; i < list.Count; i++)
+					atoms [i] = list [i] as Gdk.Atom;
+
+				return atoms;
+			}
+		}
+
+		[DllImport ("gdksharpglue")]
+		static extern IntPtr gtksharp_get_gdk_net_client_list (out int count);
+
+		public static Gdk.Window[] WindowManagerClientWindows {
+			get {
+				int count;
+				IntPtr raw_ret = gtksharp_get_gdk_net_client_list (out count);
+				if (raw_ret == IntPtr.Zero)
+					return new Gdk.Window [0];
+				Gdk.Window [] windows = new Gdk.Window [count];
+				int offset = 0;
+				for (int i = 0; i < count; i++) {
+					int windowID = Marshal.ReadInt32 (raw_ret, offset);
+					Console.WriteLine ("WinID: {0}", windowID);
+					offset += IntPtr.Size;
+					windows [i] = Gdk.Window.ForeignNew ((uint) windowID);
+				}
+				return windows;
+			}
+		}
+
+		[DllImport ("gdksharpglue")]
+		static extern int gtksharp_get_gdk_net_number_of_desktops ();
+
+		public static int NumberOfDesktops {
+			get {
+				return gtksharp_get_gdk_net_number_of_desktops ();
+			}
+		}
+
+		[DllImport ("gdksharpglue")]
+		static extern int gtksharp_get_gdk_net_current_desktop ();
+
+		public static int CurrentDesktop {
+			get {
+				return gtksharp_get_gdk_net_current_desktop ();
+			}
+		}
+
+		[DllImport ("gdksharpglue")]
+		static extern uint gtksharp_get_gdk_net_active_window ();
+
+		public static Gdk.Window ActiveWindow {
+			get {
+				uint windowID = gtksharp_get_gdk_net_active_window ();
+				if (windowID == 0)
+					return Gdk.Global.DefaultRootWindow;
+				Console.WriteLine ("Active Window ID: {0}", windowID);
+				Gdk.Window window = Gdk.Window.ForeignNew (windowID);
+				return window;
+			}
+		}
+
+		[DllImport ("gdksharpglue")]
+		static extern IntPtr gtksharp_get_gdk_net_workarea ();
+
+		public static Gdk.Rectangle[] DesktopWorkareas {
+			get {
+				IntPtr raw_ret = gtksharp_get_gdk_net_workarea ();
+				if (raw_ret == IntPtr.Zero)
+					return new Gdk.Rectangle [0];
+				GLib.List list = new GLib.List (raw_ret, typeof (Gdk.Rectangle));
+				Gdk.Rectangle[] workareas = new Gdk.Rectangle [list.Count];
+				for (int i = 0; i < list.Count; i++)
+					workareas [i] = (Gdk.Rectangle) list [i];
+
+				return workareas;
+			}
+		}
