@@ -7,7 +7,8 @@ GLUE_OBJS = \
 	dragcontext.o		\
         event.o                 \
         selection.o             \
-	win32dll.o
+	win32dll.o		\
+	windowmanager.o
 
 all: gdksharpglue.dll
 
